--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@revolist/revogrid": "^4.4.0-next.36",
+    "@revolist/vue-datagrid": "^4.4.0-next.1",
     "vuetable-2": "^2.0.0-beta.4"
   }
 }
